--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack": "~2.4.1",
     "babel-core": "~6.24.1",
     "babel-loader": "~6.4.1",
-    "babel-preset-stage-0": "~6.24.1"
+    "babel-preset-stage-0": "~6.24.1",
+    "babel-preset-es2015": "~6.9.0"
   }
 }
