--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "babel-loader": "~6.4.1",
     "babel-preset-stage-0": "~6.24.1",
     "babel-preset-es2015": "~6.9.0"
+  },
+  "dependencies": {
+    "optimizely-client-sdk": "~1.3.5",
+    "xhr-request": "~1.0.1"
   }
 }
